force-app/main/default/objects/LLC_BI__Data_Source_Section__c/LLC_BI__Data_Source_Section__c.object-meta.xml
<CustomObject>
    <description>This object groups all data source items for a particular section of a data source. For example, in Data Recognition, it groups all the fields for a specific page of a supported form. The values in this object populate via data load.</description>
    <label>Data Source Section</label>
    <nameField>
        <label>Data Source Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Source Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>