force-app/main/default/objects/LLC_BI__Data_Source_Section__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>The system populates this field via data load. It indicates which section a data source item belongs to.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>