force-app/main/default/objects/LLC_BI__Data_Source_Section__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>The system automatically populates this required field with an unique id of the related object.</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>