force-app/main/default/objects/LLC_BI__Data_Source_Section__c/fields/LLC_BI__Parent_Data_Source_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Data_Source_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this field with a lookup ID to the Data Source Section object.</description>
    <label>Parent Data Source Section</label>
    <referenceTo>LLC_BI__Data_Source_Section__c</referenceTo>
    <relationshipLabel>Parent Data Source Section</relationshipLabel>
    <relationshipName>Parent_Data_Source_Section</relationshipName>
    <type>Lookup</type>
</CustomField>